--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
         <iframe class="pdf" 
                 src=
-"/mentor-coach/brief.pdf"
+"/mentor-coach/Para_slov_ob_emodzhi__Timofey_Chaptykov__CodeFest_2019.pdf"
             width="100%" height="100%">
         </iframe>
 </body>
