--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     }
 </style>
 <body>
-        <iframe class="pdf" 
+        <embed class="pdf" 
                 src=
 "/mentor-coach/Ирина.pdf"
             width="100%" height="100%">
-        </iframe>
+        </embed>
 </body>
 
 </html>
