--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
     .pdf {
         width: 100%;
-        aspect-ratio: 4 / 3;
+        border: none;
     }
     .pdf,
     html,
@@ -17,11 +17,11 @@
     }
 </style>
 <body>
-        <embed class="pdf" 
+        <iframe class="pdf" 
                 src=
-"/mentor-coach/Ирина.pdf"
+"http://docs.google.com/viewer?url=https://romanchuk.github.io/mentor-coach/Ирина.pdf&embedded=true"
             width="100%" height="100%">
-        </embed>
+        </iframe>
 </body>
 
 </html>
